JackettUpdate Version 1.1 Beta
* Corrected some default option errors in configupdate, the defaults are different for Jackett than Emby this script was forked form
* Fixed an incorrect variable in configsetup. One of the servstop variables made it into the servstart logic block
* Updated README.md file for use with Jackett


JackettUpdate version 1.0 Beta (Rolled 5/16/2020)
* Converted Embyupdate to jackettupdate
* Staying at this version till it get it working as expected